# JiPP2

./: CMakeLists.txt
FirstClass/: CMakeLists.txt
FirstClass/include/: ClassProstopadl.h  Figura.h  FunkcjaKwadratowa.h  KonstDest.h  Punkt.h  Student.h  kula.h
FirstClass/src/: ClassProstopadl.cpp  Figura.cpp  FunkcjaKwadratowa.cpp  KonstDest.cpp  Punkt.cpp  Student.cpp  kula.cpp
FirstClassCall/: main.cpp
FirstLib/: CMakeLists.txt
FirstLib/src/: lib.cpp
FirstLibCall/: CMakeLists.txt  main.cpp
FristClassCall/: CMakeLists.txt  main.cpp
Pojazd/: CMakeLists.txt
Pojazd/include/: Pojazd.h
Pojazd/src/: Pojazd.cpp  main.cpp
WorkoutLogger/: CMakeLists.txt
WorkoutLogger/include/: AccessoryExercise.h  Error.h  Exercise.h  Login.h  MainExercise.h  Menu.h  Register.h  Workout.h
WorkoutLogger/src/: AccessoryExercise.cpp  Error.cpp  Exercise.cpp  Login.cpp  MainExercise.cpp  Menu.cpp  Register.cpp  Workout.cpp  main.cpp
allocation_basics/: main.cpp
lab10.1/include/: Exception.h
lab10.1/src/: Exception.cpp  (+1 more)
lab11/: CMakeLists.txt  main.cpp
lab12/: CMakeLists.txt
lab12.2/: CMakeLists.txt
lab5zad3/: CMakeLists.txt
lab7/: CMakeLists.txt
lab8/: CMakeLists.txt
lab9/: CMakeLists.txt
matrixApp/: CMakeLists.txt  main.cpp
matrixLib/: CMakeLists.txt
node/: CMakeLists.txt
notes/: CMakeLists.txt
obsluga_bledow/: CMakeLists.txt  main.cpp
przekazywanie_przez_wsk/: CMakeLists.txt  main.cpp
simpleCalc/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
urojone/: CMakeLists.txt
vector/: CMakeLists.txt
zadanie_tablice/: CMakeLists.txt  main.cpp
(+53 files in other folders)
