cmake_minimum_required(VERSION 3.16)

set(CMAKE_CXX_STANDARD 17)

project(allocation_basics)

project(simpleCalc)

project(FirstLibCall)

add_subdirectory(allocation_basics)

add_subdirectory(simpleCalc)

add_subdirectory(FirstLib)

add_subdirectory(FirstLibCall)

add_subdirectory(zadanie_tablice)

add_subdirectory(przekazywanie_przez_wsk)

add_subdirectory(obsluga_bledow)

add_subdirectory(matrixLib)

add_subdirectory(matrixApp)

add_subdirectory(FirstClass)

add_subdirectory(FirstClassCall)

add_subdirectory(lab5)

add_subdirectory(Pojazd)

add_subdirectory(test)

add_subdirectory(lab5zad3)

add_subdirectory(node)

add_subdirectory(vector)



